  -  Make language_permissions configurable in language files via ['PARSER_CONTROL']['ENABLE_FLAGS']
     this makes is_a calls unneeded and thus prevents PHP notices in PHP 5.x (milian)
  -  Support Apache's configuration sections, see http://httpd.apache.org/docs/2.2/sections.html (milian)
  -  Minor issue with PHP Heredoc and Nowdoc syntax sometimes not getting highlighted (BenBE)
Version 1.0.7.22
  -  Added language files
     * glSlang (BenBE)
     * KiXtart (Riley McArdle)
     * Lotus Notes @Formulas (Richard Civil)
     * LotusScript (Richard Civil)
     * MXML (David Spurr)
     * Scala (Franco Lombardo)
     * ActionScript 3 (Jordi Boggiano)
     * GNU Gettext .po/.pot (Milian Wolff)
     * Verilog (Günter Dannoritzer)
  -  Fixed a problem not yet addressed in 1.0.7.21 regarding highlighting of
     symbols that caused some extra characters to be added in the output or
     broke highlighting and standard compliance due to missing escaping of
     internally used characters (SF#192320 and SF#1926259, BenBE)
  -  Fixed missing style information for ocaml language file (The_PHP_Jedi)
  -  Fixed a bug causing masses of warnings in rendered output if language file
     miss style information (The_PHP_Jedi, BenBE)
  -  Missing tab width information could lead to warnings (BenBE)
  -  Missing symbol information for ASP (SF#1952038, nfsupport, BenBE)
  -  Empty delimiter message with OOoBasic (BenBE, Ccornell)
  -  Escaping of comments in LaTeX ignored (SF#1749806, BenBE)
  -  Modified Math environment $$ in LaTeX to be non-greedy (BenBE)
  -  Added possibility to match a regexp as comment (SF#1914640, SF#1945301, SF#1934832, BenBE)
  -  Introduced C-Style multiline continuation comments (SF#1914640, SF#1945301, BenBE)
  -  Introduced Fortran Comments (SF#1914640, SF#1934832, BenBE)
  -  Implemented Heredoc and Nowdoc Syntax for PHP and Perl (SF#1914640, BenBE)
  -  Implemented Compiler Directives for Delphi (SF#1914640, BenBE)