@@ -33,6 +33,7 @@ Version 1.0.8
      this makes is_a calls unneeded and thus prevents PHP notices in PHP 5.x (milian)
   -  Support Apache's configuration sections, see http://httpd.apache.org/docs/2.2/sections.html (milian)
   -  Minor issue with PHP Heredoc and Nowdoc syntax sometimes not getting highlighted (BenBE)
+  -  Fixed economy mode for GeSHi::get_stylesheet() - now it just makes so much more sense! (milian)
 Version 1.0.7.22
   -  Added language files
      * glSlang (BenBE)
